     speed setting in Preferences and instantly warp to the selected location
   * Added [lock_view] and [unlock_view] WML actions, for locking and unlocking
     gamemap view scrolling (so the user cannot scroll, while WML/Lua actions
     still can, i.e. for cutscenes)
   * Fixed CALL_FUNCTION macro (bug #19805)
   * Added [effect] apply_to=halo
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever {SOUND:SLOW}, {SOUND:POISON},
     and several macros from animation-utils2.cfg are used (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)
   * Implemented feature request for difficulty changing during campaigns.
     (see bug #10978)
   * The saved games cache file is now save_index instead of save_index.gz, and
     it is compressed when the Compressed Saves option is enabled in Advanced
     Preferences (patch #3115)
   * Show base terrain description if none for overlay (bug #19411)
   * Added wesmage tool to test SDL image manipulation functions.
   * Fixed: A possible NULL-pointer deference in get_unit_type_function.
   * Changed: Default man installation directory now confirms to FHS.
   * Added: New floating point emulation code.
   * Make Wolf Rider and Wolf raise their heads if and only if unit is
     submerged: forums.wesnoth.org/viewtopic.php?f=4&t=36212
   * Changed: Add a small cache for reading files, giving a minor improvement.
   * Added: Helper tool to create images for unit tests.
   * Added: Image manipulation unit tests.
   * Changed: Rewrote the surface blending algorithm, and improving its speed
     using NEON intrinsics on processors supporting NEON (the Pandora).