@@ -307,6 +307,7 @@ Version 1.11.0-svn:
      still can, i.e. for cutscenes)
    * Fixed CALL_FUNCTION macro (bug #19805)
    * Added [effect] apply_to=halo
+   * Converted [store_villages] from C++ to Lua
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
